fix word wrapping
i should've really just take the original style.css :)

--- a/resources/style.css
+++ b/resources/style.css
@@ -1,3 +1,7 @@
+body {
+	white-space: nowrap;
+}
+
 a {
 	text-decoration: none;
 	display: inline-block;
